feat: Implement Google Analytics tracking and a foundational base HTML template with a history dropdown.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DEBUG=True
 SPOTIPY_CLIENT_ID=554f31c5e532416dbf84ad10257f84b8
 SPOTIPY_CLIENT_SECRET=e2f4880897834659b148a5daaa358438
+GOOGLE_ANALYTICS_ID=G-Q0XP63HC1P
